added json type support for dynamic deserializers